--- a/web/css/style.less
+++ b/web/css/style.less
@@ -9,48 +9,70 @@
 @warning-hover: #e68a00;
 @danger: #f44336;
 @danger-hover: #da190b;
-
-.sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 60px;
-    transition: 0.5s;
-    a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: @fontSize * 4;
-        color: @color-default;
+*{ box-sizing: border-box }
+body{
+    font-family: "PT Sans", Arial, sans-serif;
+    max-width: 1200px;
+    margin: auto;
+}
+a{ text-decoration: none }
+header{
+    padding: 80px;
+    background-color: #1abc9c;
+    text-align: center;
+    color: white;
+    h1{ font-size: 40px }
+}
+nav{
+    overflow: hidden;
+    background-color: #333;
+    a{
+        float: left;
         display: block;
-        transition: 0.3s;
-        @media screen and (max-height: 450px) {
-            font-size: @fontSize * 3;
+        color: white;
+        text-align: center;
+        padding: 14px 20px;
+        text-decoration: none;
+        @media screen and (max-width: 700px){
+            float: none;
+            width: 100%;
         }
     }
-    a:hover {
-        color: #f1f1f1;
+    a.right{
+        float: right;
     }
-    .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: @fontSize * 6;
-        margin-left: 50px;
+    a:hover{
+        background-color: #ddd;
+        color: black;
     }
-    @media screen and (max-height: 450px) {
-        padding-top: 15px;
+    a.active{
+        background-color: #4caf50;
+        color: white;
     }
 }
-#main {
-    transition: margin-left .5s;
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    @media screen and (max-width: 700px){
+        flex-direction: column;
+    }
+}
+aside{
+    flex: 30%;
+    background-color: #f1f1f1;
     padding: 20px;
 }
-
+main{
+    flex: 70%;
+    background-color: white;
+    padding: 20px;
+    padding-top: 0;
+}
+footer{
+    padding: 20px;
+    text-align: center;
+    background-color: #ddd;
+}
 /* Forms */
 .field {
     width: 100%;
@@ -94,9 +116,6 @@
 .btn-outline-default:hover {
     background-color: @default;
 }
-a {
-    text-decoration: none;
-}
 /* Breadcrumb */
 ul.breadcrumb {
     padding: 10px 16px;
@@ -118,5 +137,8 @@ ul.breadcrumb {
         padding: 8px;
         color: black;
         content: "/\00a0";
+    }
+    @media screen and (max-width: 700px){
+        display: none;
     }
 }
