--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,6 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 body {
   font-family: "PT Sans", Arial, sans-serif;
   max-width: 1200px;
@@ -17,9 +15,7 @@ body {
     'footer footer';
   grid-template-columns: 25% 1fr;
 }
-a {
-  text-decoration: none;
-}
+a { text-decoration: none; }
 header {
   grid-area: header;
   padding: 40px;
@@ -40,9 +36,7 @@ nav a {
   padding: 14px 20px;
   text-decoration: none;
 }
-nav a.right {
-  float: right;
-}
+nav a.right { float: right; }
 nav a:hover {
   background-color: #ddd;
   color: black;
@@ -110,33 +104,16 @@ footer {
   font-size: 18px;
   cursor: pointer;
 }
-.btn:hover {
-  background-color: black;
-}
-.btn-info {
-  background-color: #2196F3;
-}
-.btn-info:hover {
-  background-color: #0b7dda;
-}
-.btn-success {
-  background-color: #4CAF50;
-}
-.btn-success:hover {
-  background-color: #46a049;
-}
-.btn-warning {
-  background-color: #ff9800;
-}
-.btn-warning:hover {
-  background-color: #e68a00;
-}
-.btn-danger {
-  background-color: #f44336;
-}
-.btn-danger:hover {
-  background-color: #da190b;
-}
+.btn:hover { background-color: black; }
+.btn-info { background-color: #2196F3; }
+.btn-info:hover { background-color: #0b7dda; }
+.btn-success { background-color: #4CAF50; }
+.btn-success:hover { background-color: #46a049; }
+.btn-warning { background-color: #ff9800; }
+.btn-warning:hover { background-color: #e68a00; }
+.btn-danger { background-color: #f44336; }
+.btn-danger:hover { background-color: #da190b; }
+
 /* Outline buttons */
 .btn-outline-default {
   background-color: white;
@@ -200,6 +177,55 @@ ul.breadcrumb li + li:before {
 }
 .comment-time{
   color: #aaa;
+}
+
+/* Modal Boxes */
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content{
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  border-radius: 5px;
+  width: 40%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+@keyframes animatetop{
+  from{ top: -300px; opacity: 0 }
+  to{ top: 0; opacity: 1 }
+}
+
+.modal-header,
+.modal-body,
+.modal-footer{ padding: 16px; }
+.close{
+  color: grey;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus{
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 @media screen and (max-width: 768px) {
   .grid-container{
